# sarcasmDetection

./: .gitignore  README.md  app.py  main.py  model_training.py  preproces.py  pyproject.toml  utils.py
ai_core/: config.py
ai_core/data/: models.py
ai_core/models/: base_model_trainer.py
ai_core/training/: evaluator.py  pipeline.py
ai_core/utils/: preproces.py
api/: schemas.py
backend/: app.py  main.py  pyproject.toml
backend/ai_core/: config.py
backend/ai_core/data/: models.py
backend/ai_core/models/: base_model_trainer.py  bayes_naive_trainer.py  logistic_regression_trainer.py
backend/ai_core/training/: evaluator.py  pipeline.py
backend/ai_core/utils/: preproces.py
docs/: 1. Project Structure.md  2. System Architecture.md  3. API Documentation.md  Table of Content.md
front/: README.md  package-lock.json  package.json
front/src/: App.vue
front/src/components/: AnalysisPanel.vue  Dashboard.vue  PredictionPanel.vue  StatusPanel.vue
front/src/services/: api.ts
front/src/types/: index.ts
